Add Form's name and ID

--- a/project_4_creditCard.html
+++ b/project_4_creditCard.html
@@ -58,7 +58,7 @@
                 <li><a href="#cirrus" class="cirrus" title="Cirrus"></a></li>
             </ul>
           </div>
-        <form action="#" method="#">
+        <form id="cardForm" name="cardForm" action="#" method="#">
           <div id="card-info">
             <ul class="form-list">
               <li>
