Change controls markup in project_5

--- a/project_5.html
+++ b/project_5.html
@@ -62,10 +62,26 @@
         <input type="button" name="=" value="=" class="button equal hover-controls">
       </section>
       <section id="controls">
-        <input type="button" name="add" value="&#43;" class="button oper-controls hover-controls">
-        <input type="button" name="sub" value="&#45;" class="button oper-controls hover-controls">
-        <input type="button" name="div" value="&#247;" class="button oper-controls hover-controls">
-        <input type="button" name="mult" value="&#42;" class="button oper-controls hover-controls">
+        <input  class="button oper-controls hover-controls"
+                id="add"
+                name="add" 
+                type="button"
+                value="&#43;">
+        <input  class="button oper-controls hover-controls"
+                id="sub" 
+                name="sub" 
+                type="button" 
+                value="&#45;">
+        <input  class="button oper-controls hover-controls"
+                id="div"
+                name="div"
+                type="button" 
+                value="&#247;">
+        <input  class="button oper-controls hover-controls"
+                id="mult"
+                name="mult"
+                type="button"
+                value="&#42;">
       </section>
       </div>
     </div>
