--- a/project_5.html
+++ b/project_5.html
@@ -44,22 +44,78 @@
       <input type="text" disabled name="result" id="result">
       <div id="calc-controls">
       <section id="top-controls">
-        <input type="button" name="del" value="DEL" class="button clear-controls">
-        <input type="button" name="clear" value="CLEAR" class="button clear-controls">
+        <input  class="button clear-controls"
+                id="del"
+                name="del"
+                type="button"
+                value="DEL">
+        <input  class="button clear-controls"
+                id="clear"
+                name="clear"
+                type="button"
+                value="CLEAR">
       </section>
       <section id="numbers">
-        <input type="button" name="7" value="7" class="button"> 
-        <input type="button" name="8" value="8" class="button"> 
-        <input type="button" name="9" value="9" class="button">
-        <input type="button" name="4" value="4" class="button">
-        <input type="button" name="5" value="5" class="button">
-        <input type="button" name="6" value="6" class="button">
-        <input type="button" name="1" value="1" class="button">
-        <input type="button" name="2" value="2" class="button">
-        <input type="button" name="3" value="3" class="button">
-        <input type="button" name="0" value="0" class="button double">
-        <input type="button" name="," value="&#44;" class="button double">
-        <input type="button" name="=" value="=" class="button equal hover-controls">
+        <input  class="button" 
+                id="7"
+                name="7"
+                type="button"
+                value="7"> 
+        <input  class="button" 
+                id="8"
+                name="8"
+                type="button"
+                value="8"> 
+        <input  class="button" 
+                id="9"
+                name="9"
+                type="button"
+                value="9">
+        <input  class="button" 
+                id="4"
+                name="4"
+                type="button"
+                value="4">
+        <input  class="button" 
+                id="5"
+                name="5"
+                type="button"
+                value="5">
+        <input  class="button" 
+                id="6"
+                name="6"
+                type="button"
+                value="6">
+        <input  class="button" 
+                id="1"
+                name="1"
+                type="button"
+                value="1">
+        <input  class="button" 
+                id="2"
+                name="2"
+                type="button"
+                value="2">
+        <input  class="button" 
+                id="3"
+                name="3"
+                type="button"
+                value="3">
+        <input  class="button double"
+                id="0"
+                name="0"
+                type="button"
+                value="0">
+        <input  class="button double"
+                id="comma"
+                name="comma"
+                type="button"
+                value="&#44;">
+        <input  class="button equal hover-controls"
+                name="equal"
+                name="equal"
+                type="button"
+                value="=">
       </section>
       <section id="controls">
         <input  class="button oper-controls hover-controls"
