Fix the result's input markup

--- a/project_5.html
+++ b/project_5.html
@@ -41,7 +41,7 @@
     
     <!-- PROJECT CONTENT -->
   <div id="calc-wrapper">
-      <input type="text" disabled name="result" id="result">
+      <input id="result" name="result" type="text" disabled>
       <div id="calc-controls">
       <section id="top-controls">
         <input  class="button clear-controls"
@@ -141,7 +141,10 @@
       </section>
       </div>
     </div>
-  
+
+<script>
+
+</script>  
   
 </body>
 </html>
